--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <body>
 
-	<h1> LLUBAKA </h1>
+<marquee behavior="scroll" direction="left" style="font-size:120px"> llubaka </marquee> 
 	
 </body>
 
