--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <body>
 
-<marquee behavior="scroll" direction="left" style="font-size:120px"> llubaka </marquee> 
+<marquee behavior="scroll" direction="left"  > llubaka </marquee> 
 	
 </body>
 
