--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
 </head>
 
 <body>
+<h1 style="color:red">  llubaka's site </h1>
+<button onclick="getscreenwidth()"> sasasaasas </button>
+<script>
+function getscreenwidth() { 
+var w = window.innerWidth;
 
-<marquee behavior="scroll" direction="left"  > llubaka </marquee> 
+alert(w);
+}
+</script>
+<marquee behavior="scroll" direction="left"  style="color:red"  > llubaka </marquee> 
 <marquee behavior="scroll" direction="right"  > llubaka </marquee> 
 <marquee behavior="scroll" direction="left"  > llubaka </marquee> 
 <marquee behavior="scroll" direction="right"  > llubaka </marquee> 
