--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 
 <body>
 <h1 style="color:red">  llubaka's site </h1>
-<button onclick="getscreenwidth()"> sasasaasas </button>
+<button onclick="getscreenwidth()"> Get screen width </button>
+<button onclick="detectmob()"> Is Mobile </button>
+
 <script>
 function getscreenwidth() { 
 var w = window.innerWidth;
@@ -13,6 +15,15 @@ var w = window.innerWidth;
 alert(w);
 }
 </script>
+
+<script>
+
+function detectmob(){
+var isMobile = window.orientation > -1;
+alert(isMobile ? 'Mobile' : 'Not mobile');
+}
+</script>
+
 <marquee behavior="scroll" direction="left"  style="color:red"  > llubaka </marquee> 
 <marquee behavior="scroll" direction="right"  > llubaka </marquee> 
 <marquee behavior="scroll" direction="left"  > llubaka </marquee> 
