--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 
 <body>
 <h1 style="color:red">  llubaka's site </h1>
-<button onclick="getscreenwidth()" style="width:100%"> Get screen width </button> </br> </br>
-<button onclick="alert(detectmob())" style="width:100%"> Is Mobile </button> </br> </br>
-<button onclick="alert(detectmob2())" style="width:100%"> Is Mobile 2 </button> </br> </br>
+<button onclick="getscreenwidth()" style="width:100%; height:10%"> Get screen width </button> </br> </br>
+<button onclick="alert(detectmob())" style="width:100%; height:10%"> Is Mobile </button> </br> </br>
+<button onclick="alert(detectmob2())" style="width:100%; height:10%"> Is Mobile 2 </button> </br> </br>
 
 <script>
 function getscreenwidth() { 
