--- a/index.html
+++ b/index.html
@@ -35,6 +35,68 @@ function detectmob2(){
 }
 </script> 
 
+ <div style="border-style: groove; width:48%; display: inline-block; margin-top: 5px;">
+
+            <div style="width:45%; display: inline-block; vertical-align: middle;">
+                <ul>
+                    <li> @pAC.ProducerName</li>
+                    <li> @pAC.CategoryName</li>
+                    <li> @pAC.Model </li>
+                    <li> @pAC.Price лв.</li>
+                    <li> @pAC.EnergyClassCold (Охлаждане)</li>
+                    <li> @pAC.EnergyClassHot (Отопление)</li>
+                    <li> @pAC.Power BTU</li>
+                    <li> @pAC.Guarantee г.</li>
+                    <li> @pAC.Discount%</li>
+                    <li> @pAC.Stock бр.</li>
+                </ul>
+            </div>
+
+            <div style="width:50%; display: inline-block;">
+
+                <img src="https://a.imge.to/2019/12/19/vOVTMT.md.jpg" border="0" style="width:100%;" />
+
+            </div>
+
+            <div>
+                <button type="submit" form="form" value="@pAC.Id" onclick="setSubmitTextBoxValue(this)" ; style="width:100%">
+                    Промени
+                </button>
+            </div>
+
+        </div>
+		
+		 <div style="border-style: groove; width:48%; display: inline-block; margin-top: 5px;">
+
+            <div style="width:45%; display: inline-block; vertical-align: middle;">
+                <ul>
+                    <li> @pAC.ProducerName</li>
+                    <li> @pAC.CategoryName</li>
+                    <li> @pAC.Model </li>
+                    <li> @pAC.Price лв.</li>
+                    <li> @pAC.EnergyClassCold (Охлаждане)</li>
+                    <li> @pAC.EnergyClassHot (Отопление)</li>
+                    <li> @pAC.Power BTU</li>
+                    <li> @pAC.Guarantee г.</li>
+                    <li> @pAC.Discount%</li>
+                    <li> @pAC.Stock бр.</li>
+                </ul>
+            </div>
+
+            <div style="width:50%; display: inline-block;">
+
+                <img src="https://a.imge.to/2019/12/19/vOVTMT.md.jpg" border="0" style="width:100%;" />
+
+            </div>
+
+            <div>
+                <button type="submit" form="form" value="@pAC.Id" onclick="setSubmitTextBoxValue(this)" ; style="width:100%">
+                    Промени
+                </button>
+            </div>
+
+        </div>
+
 <marquee behavior="scroll" direction="left"  style="color:red"  > llubaka </marquee> 
 <marquee behavior="scroll" direction="right"  > llubaka </marquee> 
 <marquee behavior="scroll" direction="left"  > llubaka </marquee> 
