--- a/index.html
+++ b/index.html
@@ -3,24 +3,38 @@
 <head>
 </head>
 
-<body>
+<body onload="javascript:setProps()">
 <h1 style="color:red;">  llubaka's site </h1>
-<button onclick="getscreenwidth()" style="width:100%; height:10%; font-size: 200%;"> Get screen width </button> </br> </br>
+
+<h1 id="2">  x  </h1>
+
+<button id="1" onclick="getscreenwidth()" style="width:100%; height:10%; font-size: 200%;"> Get screen width </button> </br> </br>
 <button onclick="alert(detectmob())" style="width:100%; height:10%; font-size: 200%;"> Is Mobile </button> </br> </br>
 <button onclick="alert(detectmob2())" style="width:100%; height:10%; font-size: 200%;"> Is Mobile 2 </button> </br> </br>
 
-<script>
+<script> 
+
+function setProps(){
+	if(detectmob()){
+		document.getElementById("div2").style.width = "100%";
+		document.getElementById("div1").style.width = "100%";  
+	}
+	else{
+		document.getElementById("div2").style.width = "48%";
+		document.getElementById("div1").style.width = "48%";  
+	}
+}
+
 function getscreenwidth() { 
 var w = window.innerWidth;
-
 alert(w);
 }
 
 function detectmob(){
 var isM = isMobile = window.orientation > -1; 
 
-if(isM === true){ return 'Is Mobile'}
-else {return 'Is PC'}
+if(isM === true){ return true}
+else {return false}
 
 }
 
@@ -28,17 +42,17 @@ function detectmob2(){
 	var isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
 		 
 		if (isMobile) {
-  			 return 'Is Mobile'
+  			 return 'You are using mobile phone'
 		} else {
-			return 'Is PC'
+			return 'You are using PC'
 		}
 }
 </script> 
 
- <div style="border-style: groove; width:100%; display: inline-block; margin-top: 5px;">
+ <div id="div1" style="border-style: groove; width:100%; display: inline-block; margin-top: 5px;">
 
             <div style="width:45%; display: inline-block; vertical-align: middle;">
-                <ul>
+                <ul style="vertical-align: middle; display: inline-block;">
                     <li> @pAC.ProducerName</li>
                     <li> @pAC.CategoryName</li>
                     <li> @pAC.Model </li>
@@ -66,7 +80,7 @@ function detectmob2(){
 
         </div>
 		
-		 <div style="border-style: groove; width:100%; display: inline-block; margin-top: 5px;">
+		 <div id="div2" style="border-style: groove; width:100%; display: inline-block; margin-top: 5px;">
 
             <div style="width:45%; display: inline-block; vertical-align: middle;">
                 <ul>
