--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
 
 <head>
+<style>
+marquee   {color: green;}
+</style>
 </head>
 
 <body onload="javascript:setProps()">
@@ -66,7 +69,7 @@ function detectmob2(){
                 </ul>
             </div>
 
-            <div style="width:50%; display: inline-block;">
+            <div style="width:50%; display: inline-block; vertical-align: middle;">
 
                 <img src="https://a.imge.to/2019/12/19/vOVTMT.md.jpg" border="0" style="width:100%;" />
 
@@ -99,7 +102,7 @@ function detectmob2(){
 
             <div style="width:50%; display: inline-block;">
 
-                <img src="https://a.imge.to/2019/12/19/vOVTMT.md.jpg" border="0" style="width:100%;" />
+                <img src="https://a.imge.to/2019/12/19/vOVTMT.md.jpg" border="0" style="width:100%; vertical-align: middle;" />
 
             </div>
 
