--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ marquee   {color: green;}
 <h1 id="2">  x  </h1>
 
 <button id="1" onclick="getscreenwidth()" style="width:100%; height:10%; font-size: 200%;"> Get screen width </button> </br> </br>
-<button id="button1" onclick="alert(detectmob())" style="width:100%; height:10%; font-size: 200%;"> Is Mobile </button> </br> </br>
+<button  onclick="alert(detectmob())" style="width:100%; height:10%; font-size: 200%;"> Is Mobile </button> </br> </br>
 <button onclick="alert(detectmob2())" style="width:100%; height:10%; font-size: 200%;"> Is Mobile 2 </button> </br> </br>
 
 <script> 
@@ -21,7 +21,7 @@ function setProps(){
 	if(detectmob()){
 		document.getElementById("div2").style.width = "100%";
 		document.getElementById("div1").style.width = "100%"; 
-		document.getElementById("div1").style.height = "25%"; 		
+		document.getElementById("div1").style.height = "7%"; 		
 	}
 	else{
 		document.getElementById("div2").style.width = "48%";
@@ -77,7 +77,7 @@ function detectmob2(){
             </div>
 
             <div>
-                <button type="submit" form="form" value="@pAC.Id" onclick="setSubmitTextBoxValue(this)" ; style="width:100%">
+                <button id="button1" type="submit" form="form" value="@pAC.Id" onclick="setSubmitTextBoxValue(this)" ; style="width:100%">
                     Промени
                 </button>
             </div>
