--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ function setProps(){
 		document.getElementById("div2").style.width = "100%";
 		document.getElementById("div1").style.width = "100%"; 
 		document.getElementById("button1").style.height = "7%"; 		
+		document.getElementById("button1").style.font-size = "200%";
 	}
 	else{
 		document.getElementById("div2").style.width = "48%";
