--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ function setProps(){
 	if(detectmob()){
 		document.getElementById("div2").style.width = "100%";
 		document.getElementById("div1").style.width = "100%"; 
-		document.getElementById("button1").style.height = "7%"; 		
-		document.getElementById("button1").style.font-size = "200%";
+		document.getElementById("button1").style.height = "7%"; 
+		document.getElementById("button1").style.fontSize = "200%";
 	}
 	else{
 		document.getElementById("div2").style.width = "48%";
