--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ function setProps(){
 	if(detectmob()){
 		document.getElementById("div2").style.width = "100%";
 		document.getElementById("div1").style.width = "100%"; 
+		document.getElementById("div1").style.fontSize = "170%";
 		document.getElementById("button1").style.height = "7%"; 
 		document.getElementById("button1").style.fontSize = "200%";
 	}
