--- a/index.html
+++ b/index.html
@@ -180,10 +180,18 @@
 		.cmd-control-panel-items span:hover {
 			cursor: pointer;
 			font-weight: bold;
+		} 
+
+		@media only screen and (min-width: 801px) {
+			.maximize {
+				font-size: 1.5rem;
+			}
 		}
 
-		.maximize{ 
-			font-size: 1.5rem;
+		@media only screen and (max-width: 800px) {
+			.maximize {
+				font-size: 1.0rem;
+			}
 		}
 
 		.close:hover {
