--- a/index.html
+++ b/index.html
@@ -35,15 +35,14 @@
 
 		.menu {
 			position: fixed;
+			width: 100%;
 			z-index: 2;
 			color: #2b5329;
-
 			font-family: Consolas, monaco, monospace;
 			font-size: 24px;
 			font-style: normal;
 			font-variant: normal;
 			font-weight: 700;
-
 			font-size: 1.9rem;
 		}
 
@@ -96,7 +95,7 @@
 
 		.menu-item-6 {
 			animation: appear 1.0s 0.50s;
-			animation-fill-mode: forwards;
+			animation-fill-mode: forwards; 
 		}
 
 		@keyframes appear {
