--- a/index.html
+++ b/index.html
@@ -12,6 +12,26 @@
 	<title>Lyubomir Metodiev | Lyubomir Metodiev CV | llubaka | llubaka CV </title>
 
 	<style>
+		/* width */
+		::-webkit-scrollbar {
+			width: 5px; 
+		}
+
+		/* Track */
+		::-webkit-scrollbar-track {
+			background: rgba(0, 0, 0, 0)
+		}
+
+		/* Handle */
+		::-webkit-scrollbar-thumb {
+			background: rgb(4, 73, 4);  
+		}
+
+		/* Handle on hover */
+		::-webkit-scrollbar-thumb:hover {
+			background: rgb(6, 138, 6); 
+		}
+
 		html {
 			scroll-behavior: smooth;
 		}
@@ -55,7 +75,7 @@
 
 		.menu .menu-item {
 			display: inline-block;
-			margin: 20px;
+			margin: 15px;
 			opacity: 0%;
 		}
 
@@ -95,7 +115,7 @@
 
 		.menu-item-6 {
 			animation: appear 1.0s 0.50s;
-			animation-fill-mode: forwards; 
+			animation-fill-mode: forwards;
 		}
 
 		@keyframes appear {
@@ -259,11 +279,6 @@
 		}
 	</style>
 
-</head>
-
-<body>
-
-
 	<script>
 
 		function showContent() {
@@ -343,7 +358,9 @@
 		}
 
 	</script>
+</head>
 
+<body>
 	<div class="menu">
 		<div class="menu-item menu-item-1" onclick="showHomeImage();">HOME</div>
 		<div class="menu-item menu-item-2" onclick="showBiography();">BIOGRAPHY</div>
@@ -357,9 +374,7 @@
 		src='https://scontent-frt3-1.xx.fbcdn.net/v/t1.0-9/119000455_1582061995298274_8667565932085108277_o.jpg?_nc_cat=106&_nc_sid=8024bb&_nc_ohc=6qh2EqdG0_wAX9quvw1&_nc_ht=scontent-frt3-1.xx&oh=91e13a4e27aa9274bf0c9f3b9b3a7d23&oe=5F7D2DA4'>
 
 	<div id='content' class="content">
-
 		<div id="cmd-container" class="cmd-container">
-
 			<div class="cmd">
 				<div class="cmd-control-panel">
 					<img class='cmd-icon'
@@ -376,12 +391,8 @@
 					<div id="cmd-body-msg" class="cmd-body-msg"> </div>
 					<div class="cmd-body-newline"> admin> <span class="cmd-body-newline-dash">_</span> </div>
 				</div>
-
 			</div>
-
 		</div>
-
-
 	</div>
 
 
@@ -393,13 +404,11 @@
 			<div class="second-image-txt-content">
 			</div>
 		</div>
-
 	</div>
 
 	<footer class="footer">
 
 	</footer>
-
 
 </body>
 
