--- a/index.html
+++ b/index.html
@@ -12,22 +12,25 @@
 	<title>Lyubomir Metodiev | Lyubomir Metodiev CV | llubaka | llubaka CV </title>
 
 	<style>
-		/* width */
+		* {
+			margin: 0px;
+			padding: 0px;
+		}
+
+		body {
+			background: blue;
+		}
+
 		::-webkit-scrollbar {
-			width: 5px; 
+			width: 15px;
 		}
-
-		/* Track */
 		::-webkit-scrollbar-track {
-			background: rgba(0, 0, 0, 0)
+			background: rgba(0, 0, 0, 0);
 		}
-
-		/* Handle */
 		::-webkit-scrollbar-thumb {
-			background: rgb(4, 73, 4);  
+			background: rgb(4, 73, 4);
+			border: 5px black solid;
 		}
-
-		/* Handle on hover */
 		::-webkit-scrollbar-thumb:hover {
 			background: rgb(6, 138, 6); 
 		}
