--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		content="Personal website of Lyubomir Metodiev. Hosted by github.com. This site(code) is part of { Arctic Code Vault Contributor }">
 	<meta name="keywords"
 		content="Lyubomir Metodiev, Lyubomir Metodiev CV, llubaka, llubaka CV, Arctic Code Vault Contributor, llubaka github ">
+	<meta name="theme-color" content="#000000" />	
 
 	<title>Lyubomir Metodiev | Lyubomir Metodiev CV | llubaka | llubaka CV </title>
 
@@ -25,7 +26,7 @@
 			width: 15px;
 		}
 		::-webkit-scrollbar-track {
-			background: rgba(0, 0, 0, 0);
+			background: #000000;
 		}
 		::-webkit-scrollbar-thumb {
 			background: rgb(4, 73, 4);
