--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		content="Personal website of Lyubomir Metodiev. Hosted by github.com. This site(code) is part of { Arctic Code Vault Contributor }">
 	<meta name="keywords"
 		content="Lyubomir Metodiev, Lyubomir Metodiev CV, llubaka, llubaka CV, Arctic Code Vault Contributor, llubaka github ">
-	<meta name="theme-color" content="#000000" />	
+	<meta name="theme-color" content="#221f1f" />	
 
 	<title>Lyubomir Metodiev | Lyubomir Metodiev CV | llubaka | llubaka CV </title>
 
