--- a/index.html
+++ b/index.html
@@ -48,8 +48,13 @@
 			background-repeat: no-repeat;
 			background-attachment: fixed;
 			background-size: cover;
-			background-position: center;
 		}
+
+		@media only screen and (min-width: 800px) { 
+			.menu{
+			background-position: center;
+			}
+		} 
 
 		.bg-image {
 			width: 100%;
