--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		content="Personal website of Lyubomir Metodiev. Hosted by github.com. This site(code) is part of { Arctic Code Vault Contributor }">
 	<meta name="keywords"
 		content="Lyubomir Metodiev, Lyubomir Metodiev CV, llubaka, llubaka CV, Arctic Code Vault Contributor, llubaka github ">
-	<meta name="theme-color" content="#221f1f" />	
+	<meta name="theme-color" content="#000000" />
 
 	<title>Lyubomir Metodiev | Lyubomir Metodiev CV | llubaka | llubaka CV </title>
 
@@ -25,15 +25,18 @@
 		::-webkit-scrollbar {
 			width: 15px;
 		}
+
 		::-webkit-scrollbar-track {
 			background: #000000;
 		}
+
 		::-webkit-scrollbar-thumb {
 			background: rgb(4, 73, 4);
 			border: 5px black solid;
 		}
+
 		::-webkit-scrollbar-thumb:hover {
-			background: rgb(6, 138, 6); 
+			background: rgb(6, 138, 6);
 		}
 
 		html {
@@ -50,11 +53,11 @@
 			background-size: cover;
 		}
 
-		@media only screen and (min-width: 800px) { 
-			.menu{
-			background-position: center;
+		@media only screen and (min-width: 800px) {
+			.menu {
+				background-position: center;
 			}
-		} 
+		}
 
 		.bg-image {
 			width: 100%;
