--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 		}
 
 		.menu {
+			top: 0;
 			position: fixed;
 			width: 100%;
 			z-index: 2;
@@ -76,6 +77,7 @@
 			font-variant: normal;
 			font-weight: 700;
 			font-size: 1.9rem;
+			transition: top 0.4s, background-color 0.4s;
 		}
 
 		/* 
@@ -292,6 +294,26 @@
 	</style>
 
 	<script>
+		var prevScrollpos = window.pageYOffset;
+		window.onscroll = function () {
+			if (parseInt(window.scrollY) > 65) {
+				document.getElementById("navbar").style.backgroundColor = "black";
+			}
+			else{
+				document.getElementById("navbar").style.backgroundColor = "rgba(0, 0, 0, 0)";
+			}
+
+			var currentScrollPos = window.pageYOffset;
+
+			if (prevScrollpos > currentScrollPos) {
+				document.getElementById("navbar").style.top = "0";
+			} else {
+				document.getElementById("navbar").style.top = "-65px";
+			}
+			prevScrollpos = currentScrollPos;
+		}
+	</script>
+	<script>
 
 		function showContent() {
 			var x = document.getElementById("content");
@@ -373,7 +395,7 @@
 </head>
 
 <body>
-	<div class="menu">
+	<div id="navbar" class="menu">
 		<div class="menu-item menu-item-1" onclick="showHomeImage();">HOME</div>
 		<div class="menu-item menu-item-2" onclick="showBiography();">BIOGRAPHY</div>
 		<div class="menu-item menu-item-3" onclick="showInterests();">INTERESTS</div>
